--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "core-js": "^3.0.0",
     "echarts": "^4.6.0",
     "quasar": "^1.15.0",
+    "quasar-app-extension-http-authentication": "^1.0.4",
     "vue-apexcharts": "^1.5.2",
     "vue-echarts-v3": "^2.0.1",
     "vue-i18n": "^8.0.0",
-    "vuedraggable": "^2.23.2"
+    "vuedraggable": "^2.23.2",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
